Actually fixed the navbar on small screens.

--- a/haupt-css.css
+++ b/haupt-css.css
@@ -66,7 +66,7 @@ main {
 .nav-link {
   display: flex;
   align-items: center;
-  height: 5rem;
+
   color: var(--text-primary);
   text-decoration: none;
   filter: grayscale(100%) opacity(0.7);
@@ -142,6 +142,7 @@ main {
 
   .nav-link {
     justify-content: center;
+    height: 3rem;
   }
 
   main {
@@ -174,5 +175,9 @@ main {
     
 .navbar:hover .link-text {
   display: block;
+}
+
+.nav-link {
+  height: 5rem;
 }
 }
